# GeneticAlgorithm

./: CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml
examples/find_password/: find_password.cpp  find_password_decoder.cpp
examples/furniture_manufacturer/: furniture_manufacturer.cpp
examples/housing_development/: housing_development.cpp
examples/multi_peak_function/: multi_peak_function_float.cpp  multi_peak_function_float2.cpp  multi_peak_function_int.cpp
examples/traveling_salesman/: traveling_salesman.cpp
inc/: GeneticAlgorithm.h  Individual.h  TerminationConditions.h
src/: TerminationConditions.cpp
test/: test.cpp  test_macros.cpp
